--- a/CasaDoCodigo_v1/Views/Pedido/Cadastro.cshtml
+++ b/CasaDoCodigo_v1/Views/Pedido/Cadastro.cshtml
@@ -74,7 +74,7 @@
             </div>
 
             <div class="form-group">
-                <a class="btn btn-success" href="/">
+                <a class="btn btn-success" asp-action="Carrossel">
                     Continuar Comprando
                 </a>
             </div>
